<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_book_detail">Book Details</string>
    <string name="search_text">Search</string>
    <string name="share_text">Share</string>

    <string name="app_name">bookshelf</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="submit_button">Submit</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="submit_toast">User account created!</string>
    <string name="submit_invalid_toast">Invalid submission</string>
    <string name="invalid_first_name_toast">You did not enter a first name</string>
    <string name="invalid_last_name_toast">You did not enter a last name</string>
    <string name="invalid_email_toast">You did not enter a valid email address</string>
    <string name="invalid_password_toast">You did not eneter a valid password</string>
    <string name="invalid_password_confirmation_toast">You did not enter matching passwords</string>
    <string name="existing_account_toast">You already have an account.</string>
    <string name="login_title">Log In</string>
    <string name="or">or</string>
    <string name="successful_login_toast">You have successfully logged in!</string>
    <string name="no_existing_account_toast">There is no account for that email address.</string>
    <string name="incorrect_password_toast">Incorrect password.</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="add_to_shelf_button">Add to shelf</string>
    <string name="date_published">Date Published</string>
    <string name="added_to_shelf">This book has been added to your shelf.</string>
    <string name="error_adding_to_shelf">Cannot add book to shelf</string>
    <string name="user_books">Your Books</string>
    <string name="book_added">Book added to shelf</string>
    <string name="read_book">Read?</string>
    <string name="favorite_book">Favorite?</string>
    <string name="borrowed_book">Borrowed?</string>

   


    <string name="password_updated">Successfully updated password.</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="fav_book">Favourite Book Activity is open</string>
    <string name="manage_profile">Your Profile is open</string>
    <string name="share_application">Ready to share information about application</string>
    <string name="sign_out_string">You have successfully sign out</string>
    <string name="send_app_info">Hey! Check out this amazing Book application called BookShelf.
        Download here http://www.google.com Hurry!</string>
    <string name="app_subject">Bookshelf Advertisement</string>
    <string name="send_report">Share application details via</string>
    <string name="title_activity_book_maps">Checked Out Books</string>

</resources>
