<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:cropToPadding="true"
        android:src="@drawable/ic_book_cover"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="left"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title of book"
        android:layout_gravity="left"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_gravity="left"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Author of book"
        android:layout_gravity="left"
        android:paddingBottom="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_published"
        android:layout_gravity="left"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/book_publication_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book publication date"
        android:layout_gravity="left"
        android:paddingBottom="8dp"/>

    <!--TODO: add check boxes for user info-->

    <Button
        android:id="@+id/add_to_shelf_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_shelf_button"/>

    <CheckBox
        android:id="@+id/read_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_book"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/favorite_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_book"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/borrowed_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrowed_book"
        android:visibility="gone"/>

</LinearLayout>